# goma

./: .clang-format  .gitignore  .gn  BUILD.gn  CONTRIBUTING.md  DEPS  OWNERS  PRESUBMIT.py  README.md  codereview.settings
base/: BUILD.gn  basictypes.h  compiler_specific.h  config_win.h  file.cc  file.h  file_dir.cc  file_dir.h  filesystem.cc  filesystem.h  filesystem_unittest.cc  goma_unittest.cc  join.cc  join.h  join_unittest.cc  lockhelper.cc  lockhelper.h  lockhelper_unittest.cc  options.cc  options.h  path.cc  path.h  socket_helper_win.cc  socket_helper_win.h  socket_helper_win_unittest.cc  split.cc  split.h  split_unittest.cc  status.h  string_piece_utils.cc  string_piece_utils.h  string_piece_utils_unittest.cc  strutil.cc  strutil.h  strutil_unittest.cc  thread_annotations.h
benchmark/: BUILD.gn  cpp_macro_expander_benchmark.cc  cpp_parser_benchmark.cc  file_stat_benchmark.cc  lockhelper_benchmark.cc  path_benchmark.cc  path_resolver_benchmark.cc  simple_timer_benchmark.cc  unordered_map_benchmark.cc
client/: .vpython  BUILD.gn  arfile.cc  arfile.h  arfile_reader.cc  arfile_reader.h  arfile_reader_unittest.cc  arfile_unittest.cc  atomic_stats_counter.cc  atomic_stats_counter.h  atomic_stats_counter_unittest.cc  auto_updater.cc  auto_updater.h  autolock_timer.cc  autolock_timer.h  base64.cc  base64.h  base64_fuzzer.cc  base64_unittest.cc  breakpad.h  breakpad_linux.cc  breakpad_mac.cc  breakpad_win.cc  cache_file.cc  cache_file.h  calculate_sha256.py  callback.h  callback_unittest.cc  clang_features.cc  client_util.cc  client_util.h  client_util_unittest.cc  closure_compiler.py  compilation_database_reader.cc  compilation_database_reader.h  compilation_database_reader_unittest.cc  compile_service.cc  compile_service.h  compile_stats.cc  compile_stats.h  (+377 more)
client/blob/: file_blob_downloader.cc  file_blob_downloader.h  file_service_blob_downloader.cc  file_service_blob_downloader.h  file_service_blob_uploader.cc  file_service_blob_uploader.h
client/certs/: BUILD.gn  README  certs.rc  certs_resource.h
client/clang_modules/modulemap/: BUILD.gn  cache.cc  cache.h  cache_unittest.cc  lexer.cc  lexer.h  lexer_main.cc  lexer_unittest.cc  parser.cc  parser.h  parser_main.cc  parser_unittest.cc  processor.cc  processor.h  token.cc  token.h  token_unittest.cc  type.cc  type.h
client/clang_tidy/: BUILD.gn  clang_tidy_compiler_info_builder.cc  clang_tidy_compiler_info_builder.h  clang_tidy_compiler_info_builder_unittest.cc  clang_tidy_compiler_type_specific.cc  clang_tidy_compiler_type_specific.h
client/cxx/: BUILD.gn  chromeos_compiler_info_builder_helper.cc  chromeos_compiler_info_builder_helper.h  chromeos_compiler_info_builder_helper_unittest.cc  clang_compiler_info_builder_helper.cc  clang_compiler_info_builder_helper.h  clang_compiler_info_builder_helper_unittest.cc  cxx_compiler_info.cc  cxx_compiler_info.h  cxx_compiler_info_builder.cc  cxx_compiler_info_builder.h  cxx_compiler_info_builder_unittest.cc  cxx_compiler_type_specific.cc  cxx_compiler_type_specific.h  elf_util.cc  elf_util.h  elf_util_unittest.cc  gcc_compiler_info_builder.cc  gcc_compiler_info_builder.h  gcc_compiler_info_builder_unittest.cc  gcc_compiler_type_specific.cc  gcc_compiler_type_specific.h  nacl_compiler_info_builder_helper.cc  nacl_compiler_info_builder_helper.h  vc_compiler_info_builder.cc  vc_compiler_info_builder.h  vc_compiler_info_builder_unittest.cc  vc_compiler_type_specific.cc  vc_compiler_type_specific.h
client/cxx/include_processor/: BUILD.gn  cpp_directive.cc  cpp_directive.h  cpp_directive_optimizer.cc  cpp_directive_optimizer.h  cpp_directive_optimizer_unittest.cc  cpp_directive_parser.cc  cpp_directive_parser.h  cpp_directive_parser_main.cc  cpp_directive_parser_unittest.cc  cpp_include_processor.cc  cpp_include_processor.h  cpp_include_processor_main.cc  cpp_include_processor_posix_unittest.cc  (+47 more)
client/fake/: BUILD.gn  fake_compiler_info.cc  fake_compiler_info.h  fake_compiler_info_builder.cc  fake_compiler_info_builder.h  fake_compiler_info_builder_unittest.cc  fake_compiler_type_specific.cc  fake_compiler_type_specific.h  fake_include_processor.cc  fake_include_processor.h  fake_include_processor_unittest.cc
client/java/: BUILD.gn  jar_parser.cc  jar_parser.h  jar_parser_unittest.cc  jarfile_normalizer.cc  jarfile_reader.cc  jarfile_reader.h  jarfile_reader_unittest.cc  java_compiler_info.cc  java_compiler_info.h  java_compiler_info_builder.cc  java_compiler_info_builder.h  java_compiler_info_builder_unittest.cc  java_compiler_type_specific.cc  java_compiler_type_specific.h
client/resources/: BUILD.gn  compiler_proxy_contentionz_script.js  compiler_proxy_status_html5.html  compiler_proxy_status_script.js  compiler_proxy_status_style.css  compilerz_html.html  compilerz_script.js  compilerz_style.css  legend_help.html
client/task/: compiler_flag_utils.cc  compiler_flag_utils.h  input_file_task.cc  input_file_task.h  local_output_file_task.cc  local_output_file_task.h  output_file_task.cc  output_file_task.h
lib/: BUILD.gn  clang_flags_helper.cc  clang_flags_helper.h  clang_flags_helper_unittest.cc  clang_tidy_execreq_normalizer.cc  clang_tidy_execreq_normalizer.h  clang_tidy_execreq_normalizer_unittest.cc  clang_tidy_flags.cc  clang_tidy_flags.h  clang_tidy_flags_unittest.cc  cmdline_parser.cc  cmdline_parser.h  cmdline_parser_unittest.cc  compiler_flag_type.cc  compiler_flag_type.h  compiler_flag_type_specific.cc  compiler_flag_type_specific.h  compiler_flag_type_specific_unittest.cc  compiler_flags.cc  compiler_flags.h  compiler_flags_parser.cc  compiler_flags_parser.h  compiler_flags_test.cc  compiler_flags_unittest.cc  compiler_type.cc  compiler_type.h  compiler_type_specific.cc  compiler_type_specific.h  compiler_type_specific_unittest.cc  compress_util.cc  compress_util.h  compress_util_unittest.cc  cxx_flags.h  execreq_normalizer.cc  execreq_normalizer.h  execreq_normalizer_test.cc  execreq_normalizer_unittest.cc  execreq_verifier.cc  execreq_verifier.h  execreq_verifier_test.cc  (+62 more)
testing/: test.gni
testing/libfuzzer/: BUILD.gn  README  fuzzer_test.gni
(+65 files in other folders)
